public class Empty implements Field {
    @Override
    public String toString() {
        return " ";
    }
}

