//interface for Fields
public interface Field {
    
}
