public class Gate implements Field {
    @Override
    public String toString() {
        return "_";
    }
}
