public class Wall implements Field {
    @Override
    public String toString() {
        return "#";
    }
}
